# openab-hinlam

./: CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.agentcore  Dockerfile.antigravity  Dockerfile.claude  Dockerfile.codex  Dockerfile.copilot  Dockerfile.cursor  Dockerfile.gateway  Dockerfile.gemini  Dockerfile.grok  Dockerfile.hermes  Dockerfile.mimocode  Dockerfile.native  Dockerfile.opencode  Dockerfile.pi  Dockerfile.unified  README.md  config.toml.example
.github/workflows/: build-gateway.yml  build-images.yml  build-operator.yml  ci-openab-agent.yml  ci.yml  close-stale-prs.yml  docker-smoke-test.yml  gateway-release-pr.yml  pending-maintainer.yml  pr-bot-review.yml  pr-discussion-check.yml  pr-preview.yml  pre-beta-build.yml  release.yml  slack.yml  snapshot-build.yml
agy-acp/: Cargo.toml
agy-acp/src/: adapter.rs  main.rs
charts/openab/: Chart.yaml  values.yaml
charts/openab-line/: Chart.yaml  README.md  values.yaml
charts/openab-line/templates/: NOTES.txt  _helpers.tpl  pvc.yaml  (+4 more)
crates/openab-core/: Cargo.toml
crates/openab-gateway/: Cargo.toml
docs/: agentcore.md  antigravity.md  codex.md  config-reference.md  discord.md  gh-auth-device-flow.md  hooks.md  inbound-attachments.md  kiro.md  line.md  local-vision-models.md  messaging.md  mimocode.md  native-agent.md  opencode.md  openshell.md  output-directives.md  pi.md  reactions.md  secrets-management.md  slack.md  slash-commands.md  stt.md  telegram.md
docs/adr/: control-directives.md  hooks.md  imessage-integration.md  openab-agent-mcp.md  openab-agent.md  pr-review-loop.md  secrets-management.md
gateway/src/: main.rs
openab-agent/: Cargo.toml
openab-agent/docs/: mcp-spec-alignment.md  mcp.md
openab-agent/src/: acp.rs  agent.rs  auth.rs  llm.rs  main.rs
openab-agent/src/mcp/: breaker.rs  config.rs  flow.rs  meta_tool.rs  mod.rs  oauth.rs  runtime.rs  sampling.rs
openshell/: Dockerfile
operator/src/: apply.rs  bootstrap.rs  config.rs  create.rs
src/: adapter.rs  claude_trace.rs  config.rs  cron.rs  ctl.rs  discord.rs  dispatch.rs  hooks.rs  main.rs  remind.rs  secrets.rs  slack.rs  unified_adapter.rs
src/acp/: agentcore.rs  mod.rs
(+32 files in other folders)
